--- a/fitlifepro/src/app/component/about-us/about-us.component.html
+++ b/fitlifepro/src/app/component/about-us/about-us.component.html
@@ -7,7 +7,7 @@
         <h1 class="hero-title">Get To Know <span class="highlight">About Us</span></h1>
         <p class="hero-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam</p>
         <p class="hero-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam, tortor sollicitudin egestas convallis. Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
-        <button class="cta-button">Contact Us</button>
+        <button   (click)="onContact()" class="cta-button">Contact Us</button>
       </div>
       <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/a79b4fdfa2c95298a178ff04486965c29e03e9d84f8b4881dc96de58c4dbf5cc?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="About Us Hero Image" class="hero-image" />
     </div>
@@ -70,3 +70,4 @@
     </div>
   </section>
 </main>
+<app-footer></app-footer>
