--- a/fitlifepro/src/app/component/workout/blogs/blogs.component.html
+++ b/fitlifepro/src/app/component/workout/blogs/blogs.component.html
@@ -379,7 +379,7 @@
         </div>
       </div>
       <time datetime="2022-01-24" class="article-date">24 January 2022</time>
-      <a [routerLink]="['/app-blogs1']" class="read-article-btn">Read Article</a>
+      <a  (click)="onblogs()" class="read-article-btn">Read Article</a>
       <article class="additional-article">
         <h3 class="additional-article-title">Name of the article will be here Name of the article will be here</h3>
         <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor...</p>
