--- a/fitlifepro/src/app/component/about-us/about-us.component.css
+++ b/fitlifepro/src/app/component/about-us/about-us.component.css
@@ -45,8 +45,8 @@
 }
 
 .cta-button {
-  background-color: #454545;
-  color: #fff;
+  background-color:  #fed233;
+  color: #1d1d1d;
   border: none;
   border-radius: 10px;
   padding: 15px 32px;
@@ -205,7 +205,6 @@
   width: 100%;
   height: auto;
   border-radius: 50%;
-  margin-top: -50px;
 }
 
 .member-info {
