MModify in parties front-end

--- a/fitlifepro/src/app/component/dashboard/sidebar/sidebar.component.html
+++ b/fitlifepro/src/app/component/dashboard/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav mode="side" opened>
     <div class="logo">
-      <img class="w-50" src="https://cdn.builder.io/api/v1/image/assets/TEMP/372f60e4228164299af14df192be288d95a20b0a28f094c02fd206a955333beb?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Logo">
+      <img  src="https://static.vecteezy.com/system/resources/thumbnails/020/911/740/small_2x/user-profile-icon-profile-avatar-user-icon-male-icon-face-icon-profile-icon-free-png.png" alt="Logo"  class="profil">
       <div class="user-info">
         <strong>chaimaa</strong>
       </div>
