--- a/fitlifepro/src/app/component/dashboard/sidebar/sidebar.component.css
+++ b/fitlifepro/src/app/component/dashboard/sidebar/sidebar.component.css
@@ -6,6 +6,7 @@
   margin: 16px;
   padding: 0 16px;
   color: white;
+  gap:20px;
 }
 
 .avatar {
@@ -13,6 +14,11 @@
   height: 40px;
   border-radius: 50%;
   margin-right: 10px;
+}
+.profil{
+  width: 50px;
+  height: 50px;
+  border-radius:15px;
 }
 
 .user-info {
